# Lab_MO6

./: CMakeLists.txt
include/: simplex.h
json/: input1.json  input2.json  input3.json
sources/: main.cpp  simplex.cpp
